@@ -54,9 +54,9 @@ class TC_ErrorFittedFunction_AXInv32 < Test::Unit::TestCase
     assert_equal( 1.0, @axi01.expected_error(16.0))
   end
 
-  def test_finest_y
-    assert_equal(100.0, @axi00.finest_y)
-    assert_equal(100.0, @axi01.finest_y)
+  def test_most_strict_y
+    assert_equal(100.0, @axi00.most_strict_y)
+    assert_equal(100.0, @axi01.most_strict_y)
   end
 
   def test_variance
